# AI-Novel-Writer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
novel_writer/: __init__.py  config.py  main.py
novel_writer/generators/: __init__.py  base.py  chapter_generator.py  character_generator.py  selection_editor.py  story_generator.py
novel_writer/models/: __init__.py  chapter.py  character.py  story.py
novel_writer/settings/: __init__.py  cli.py  manager.py  models.py
novel_writer/studio/: __init__.py  app.py  service.py
novel_writer/studio/static/: index.html
novel_writer/utils/: __init__.py  context_budget.py  file_manager.py
packaging/: pyinstaller.spec  studio_entry.py
tests/: __init__.py  test_chapter.py  test_character.py  test_context_budget.py  test_file_manager.py  test_settings.py  test_story.py
